--- a/src/components/navBar/NavBar.module.css
+++ b/src/components/navBar/NavBar.module.css
@@ -15,7 +15,8 @@ header a {
 
 .logo {
   width: 250px;
-  height: 50px;
+  height: 60px;
+  object-fit: cover;
 }
 
 .logo a {
@@ -23,7 +24,10 @@ header a {
 }
 
 header .nav {
-  width: 30%;
+  width: 50%;
+}
+.nav ul {
+  width: 100%;
 }
 
 .nav.open {
@@ -98,5 +102,11 @@ li a:hover {
     flex-direction: column;
     align-items: center;
     justify-content: space-around;
+  }
+}
+
+@media (min-width: 861px) and (max-width: 1280px) {
+  header .nav {
+    width: 60%;
   }
 }
