--- a/src/components/navBar/NavBar.module.css
+++ b/src/components/navBar/NavBar.module.css
@@ -1,6 +1,6 @@
 header {
   width: 100%;
-  height: 80px;
+  height: 100px;
 
   display: flex;
   align-items: center;
@@ -14,9 +14,11 @@ header a {
 }
 
 .logo {
-  width: 250px;
-  height: 60px;
+  width: 190px;
+  height: 80px;
   object-fit: cover;
+  margin-top: 10px;
+  /* border: solid red; */
 }
 
 .logo a {
